2008-09-24  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-attrpack.py.in: Created file, copying from
	tests/test-userstats.py.in
	(PokerAttrsTestCase.test01_attrsAccessorBaseClass): Wrote full
	coverage for AttrsAccessor.

	* pokernetwork/attrpack.py (AttrsLookup): Created class by
	modifying UserStatsLookup.

2008-09-23  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokernetwork/attrpack.py (AttrsFactory): Created class by
	modifying UserStatsFactory.
	(AttrsFactory.__init__): Wrote method.
	(AttrsFactory.getClass): Changed to use new instance variables.
	(AttrsAccessor): Created class by modifying UserStatsAccessor.

2008-09-18  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerservice.py.in
	(BreakTestCase.test07_tourneyFinish_withWait): Values in delays
	dict should be strings.
	(BreakTestCase.test05_tourneyNewState_tourneyStart_withWait):
	Values in delays dict should be strings.
	(BreakTestCase.test03_tourneyNewState_tourneyResumeAndDeal_withWait):
	Values in delays dict should be strings.

	* tests/test-pokeravatar.py.in (PokerAvatarTestCase.doGetStats):
	Wrote method.
	(PokerAvatarTestCase.test77_getStatsWhenLoggedIn): Wrote test.
	(PokerAvatarTestCase.getStatsError): Wrote method.
	(PokerAvatarTestCase.test78_getStatsError): Wrote test.
	(PokerAvatarTestCase.getStatsIgnored): Wrote method.
	(PokerAvatarTestCase.test79_getStatsIgnoredWhenNotAtTable): Wrote
	test.

	* pokernetwork/pokeravatar.py (PokerAvatar.getPlayerStats): Wrote
	method.

	* pokernetwork/pokerpackets.py (PacketPokerGetPlayerStats):
	changed to derive from PacketId

	* pokernetwork/pokeravatar.py (PokerAvatar.handlePacketLogic):
	Added handler for PACKET_POKER_GET_PLAYER_STATS.

	* tests/test-protocol.py.in
	(UGAMEProtocolTestCase.testHandleData): Added new packet.

	* pokernetwork/pokerpackets.py (PacketPokerGetPlayerStats):
	Created packet.

2008-09-18  Johan Euphrosine <proppy@aminche.com>

 	* Release 1.7.0

	* pokernetwork/pokerpackets.py, pokernetwork/pokertable.py,