@@ -99,6 +99,7 @@ class PokerAttrsTestCase(unittest.TestCase):
         expected public interface"""
         u = AttrsAccessor()
         self.assertEquals(u.attrsSupported, [])
+        self.assertEquals(u.expectLookupArgs, [])
         self.assertEquals(u.getSupportedAttrsList(), [])
 
         clear_all_messages()
@@ -171,152 +172,86 @@ class PokerAttrsTestCase(unittest.TestCase):
 
         self.assertEquals(f.getClass("Mock"), MockLookup)
     # -------------------------------------------------------------------------
-    # Mock ups below are used to test RankPercentile.
+    def test03_attrsLookup(self):
+        """test04_attrsLookup
+        Tests AttrsLookup: makes sure that it works properly"""
 
-    class MockTable:
-        def __init__(self, serial = None):
-            self.currency_serial = serial
-    class MockService:
-        def __init__(self, myDb = None):
-            self.db = myDb
-    # -------------------------------------------------------------------------
-    def test03_rankPercentileAccessor(self):
-        """test03_rankPercentileAccessor
-        make sure basic interfaces on the RankPercentile accessor class works
-        correctly, and test when there is no database precent"""
-        statsList = [ 'rank', 'percentile' ]
-        statsList.sort()
-        u = AttrsRankPercentileAccessor()
-        ss = u.statsSupported
-        ss.sort()
-        self.assertEquals(ss, statsList)
-        g = u.getSupportedStatsList()
-        g.sort()
-        self.assertEquals(g, statsList)
-        
-        clear_all_messages()
-        self.assertEquals(u.getStatValue('unknownstat'), None)
-        self.assertEquals(get_messages(), [ "ERROR invalid user statistic, unknownstat" ])
-
-        for stat in statsList:
-            # This will return None because the table.currency_serial is None
-            myTable = PokerAttrsTestCase.MockTable()
-            myService = PokerAttrsTestCase.MockService()
-            self.assertEquals(u.getStatValue(stat, table = myTable, userSerial = None,
-                                             service = myService), None)
-            # This will return None because the table.currency_serial is negative
-            myTable = PokerAttrsTestCase.MockTable(-1)
-            self.assertEquals(u.getStatValue(stat, table = myTable, userSerial = None,
-                                             service = myService), None)
-            # This will return None because the avatar.getSerial() returns None
-            myTable = PokerAttrsTestCase.MockTable(1)
-            self.assertEquals(u.getStatValue(stat, table = myTable, userSerial = None,
-                                             service = myService), None)
-            # This will return None because the userSerial is set to -1
-            self.assertEquals(u.getStatValue(stat, table = myTable, userSerial = -1,
-                                             service = myService), None)
-            # This will give a Attribute error because the service is None
-            errorStr = ""
-            try:
-                u.getStatValue(stat, table = myTable, userSerial = 1, service = myService)
-                self.failIf(True)  # Should not be reached
-            except AttributeError, ae:
-                errorStr = ae.__str__()
-            self.assertEquals(errorStr, "'NoneType' object has no attribute 'cursor'")
-
-            # This will fail because there is no rank table
-            clear_all_messages()
-            myService = PokerAttrsTestCase.MockService(self.db)
-            self.assertEquals(u.getStatValue(stat, table = myTable, userSerial = 1,
-                                             service = myService), None)
-            self.assertEquals(get_messages(), [ "ERROR RankPercentile: (MySQL code 1146): Table 'pokernetworktest.rank' doesn't exist"])
-        self.db.query("CREATE TABLE rank (user_serial INT, currency_serial INT, rank INT, percentile TINYINT)")
-        self.db.query("INSERT INTO rank VALUES(1, 2, 20, 30)")
-        self.db.query("INSERT INTO rank VALUES(0, 2, 20, 30)")
-        self.db.query("INSERT INTO rank VALUES(-1, 2, 20, 30)")
-        self.db.query("INSERT INTO rank VALUES(2, 0, 20, 30)")
-        self.db.query("INSERT INTO rank VALUES(2, -1, 20, 30)")
-        for (stat, value) in [ ('rank', 20), ('percentile', 30) ]:
-            myTable = PokerAttrsTestCase.MockTable(1)
-            myService = PokerAttrsTestCase.MockService(self.db)
-
-            # Should be None because no row exists for 1, 1
-            self.assertEquals(u.getStatValue(stat, table = myTable, userSerial = 1,
-                                             service = myService), None)
-
-            # Should now be the expected value
-            myTable = PokerAttrsTestCase.MockTable(2)
-            self.assertEquals(u.getStatValue(stat, table = myTable, userSerial = 1,
-                                             service = myService), value)
-            # Should also be the expected value
-            secondTable = PokerAttrsTestCase.MockTable(0)
-            self.assertEquals(u.getStatValue(stat, table = secondTable, userSerial = 2,
-                                             service = myService), value)
-
-            # Should be None, regardless of the fact that DB value is
-            # there for 0 and -1, since userSerials cannot be None or 0, or -1
-            for ser in [ None, 0, -1 ]:
-                self.assertEquals(u.getStatValue(stat, table = myTable, userSerial = ser,
-                                                 service = myService), None)
-            # Should be None, regardless of the fact that the DB value for
-            # -1 is there, since currency_serial cannot be negative
-
-            for cur in [ None, -1 ]:
-                t = PokerAttrsTestCase.MockTable(cur)
-                self.assertEquals(u.getStatValue(stat, table = t, userSerial = 2,
-                                                 service = myService), None)
-
-    # -------------------------------------------------------------------------
-    def test04_attrsLookupBaseClass(self):
-        """test04_attrsLookupBaseClass
-        Tests the base class called AttrsLookup: mainly makes sure the
-        interface functions."""
-        ul = AttrsLookup(PokerAttrsTestCase.MockService(self.db))
-        self.assertEquals(self.db, ul.service.db)
-        self.assertEquals(ul.stat2accessor, {})
-
-        # test error message for nonexistent stat
-        clear_all_messages()
-        ul.getStatValue('DOESNOTEXIST')
-        self.assertEquals(get_messages(), [ "ERROR unsupported user statistic, DOESNOTEXIST" ])
-
-        # Create a dummy accessor class and make sure
-        # AttrsLookup.getStatValue does the right thing with it.
+        # MockAccessor is a dummy accessor class that has only the
+        # interface required by AttrsLookup
         class MockAccessor():
-            def getStatValue(mockAccessorSelf, stat, a, t, s):
-                self.assertEquals(a, 1)
-                self.assertEquals(t.currency_serial, 1)
-                self.assertEquals(s, ul.service)
-
+            def getAttrValue(mockAccessorSelf, attr, **kwargs):
+                self.assertEquals(attr, "mockattr")
                 return "mockvalue"
-        table = PokerAttrsTestCase.MockTable(1)
+        # PacketPokerDummy and PacketPokerDummySupported are mock-ups that
+        # are forced into the pokerpackets module so that AttrsLookup can
+        # instantiate them
+        from pokernetwork import pokerpackets
+        class PacketPokerDummy():
+            type = 168
+            def __init__(packetPokerDummySelf, mockPacketField = 7, attrsDict = {}):
+                self.assertEquals(mockPacketField, 5)
+                self.assertEquals(attrsDict.keys(), [ 'mockattr' ])
+                self.assertEquals(attrsDict['mockattr'], 'mockvalue')
+                packetPokerDummySelf.initialized = True
+                
+        class PacketPokerSupportedAttrs():
+            type = 169
+            def __init__(packetPokerSupportedSelf, attrs = []):
+                self.assertEquals(attrs, [ 'mockattr' ])
+                packetPokerSupportedSelf.initialized = True
 
-        ul.stat2accessor['mockstat'] = MockAccessor()
-        self.assertEquals(ul.getStatValue("mockstat", table, 1), "mockvalue")
+        oldPackets = pokerpackets.PacketNames
+        pokerpackets.PacketNames[PacketPokerDummy.type] = PacketPokerDummy
+        pokerpackets.PacketNames[PacketPokerSupportedAttrs.type] = PacketPokerSupportedAttrs
 
-        pack = ul.allStatsAsPacket(table, 1)
-        self.assertEquals(pack.serial, 1)
-        self.assertEquals(pack.mockstat, 'mockvalue')
-        self.assertEquals(pack.__str__(), "type = POKER_PLAYER_STATS(156) serial = 1 mockstat = mockvalue")
+        pokerpackets.PacketPokerDummy = PacketPokerDummy
+        pokerpackets.PacketPokerSupportedAttrs = PacketPokerSupportedAttrs
 
-        pack = ul.getSupportedListAsPacket()
-        self.assertEquals(pack.stats, ['mockstat'])
-        self.assertEquals(pack.__str__(), "POKER_STATS_SUPPORTED  type = 158 length = 8 stats = ['mockstat']")
-    # -------------------------------------------------------------------------
-    def test05_attrsRankPercentileLookupBaseClass(self):
-        """test05_attrsRankPercentileLookupBaseClass
-        Tests the the RankPercentile lookup class."""
-        urpl = AttrsRankPercentileLookup(PokerAttrsTestCase.MockService(self.db))
-        self.assertEquals(self.db, urpl.service.db)
-        k = urpl.stat2accessor.keys()
-        k.sort()
-        self.assertEquals(k, [ 'percentile', 'rank' ])
-        for ii in k:
-            self.failUnless(isinstance(urpl.stat2accessor[ii], AttrsRankPercentileAccessor))
+        clear_all_messages()
+        al = AttrsLookup(attr2accessor = { 'mockattr' : MockAccessor() },
+                                              packetClassesName = "Dummy",
+                                              requiredAttrPacketFields = [ 'mockPacketField' ])
+        self.assertEquals(get_messages(),
+                          ["ERROR 'module' object has no attribute 'PacketPokerSupportedDummy'"])
+        clear_all_messages()
+        self.assertEquals(al.getAttrValue('DOESNOTEXIST'), None)
+        self.assertEquals(get_messages(), ['ERROR unsupported attribute, DOESNOTEXIST, for Dummy'])
+
+        clear_all_messages()
+        self.assertEquals(al.getAttrValue('mockattr'), "mockvalue")
+        self.assertEquals(get_messages(), [])
+
+        # Next, expect error when required packet fields are not sent to getAttrsAsPacket
+        clear_all_messages()
+        pack = al.getAttrsAsPacket()
+        self.assertEquals(pack.type, pokerpackets.PACKET_POKER_ERROR)
+        self.assertEquals(pack.serial, 0)
+        self.assertEquals(pack.message, "SERVER ERROR: PacketPokerDummy requires field mockPacketField; getAttrsAsPacket called without it")
+        self.assertEquals(pack.other_type, 168)
+        
+        self.assertEquals(get_messages(), ['ERROR PacketPokerDummy requires field mockPacketField; getAttrsAsPacket called without it'])
+
+        # Next, check a valid call to getAttrsAsPacket() which has needed
+        # fields in place, this is a valid call.
+        clear_all_messages()
+        pack = al.getAttrsAsPacket(mockPacketField = 5)
+        self.assertEquals(pack.type, 168)
+        self.assertEquals(pack.initialized, True)
+
+        self.assertEquals(get_messages(), [])
+
+        # Next, test getSupportedAttrsAsPacket()
+        clear_all_messages()
+        pack = al.getSupportedAttrsAsPacket()
+        self.assertEquals(pack.type, 169)
+        self.assertEquals(pack.initialized, True)
+        self.assertEquals(get_messages(), [])
+
+        pokerpackets.PacketNames = oldPackets
     # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-    loader.methodPrefix = "test02"
+#    loader.methodPrefix = "test03"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAttrsTestCase))
     return runner.TrialRunner(
